--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	 	<div class= "head">
 	 	<h1> AKSU Journal of Agricultural Economics, Extension and Rural Development  </h1>
 	</div>
-	<div class="col-sm-4 col-xs-4">
+	<div class="col-sm-4 hide-sm col-xs-4">
     	<div class="top_1">
 		  <ul class="social-network social-circle">
 			<li><a href="#" class="icoRss" title="Rss"><i class="fa fa-rss"></i></a></li>
@@ -40,7 +40,7 @@
 		 </ul>
 	    </div>
 	</div>
-	  <ul class="nav navbar-nav navbar-right">
+	  <ul class="nav hide-sm navbar-nav navbar-right">
                   <li><a href="project/reg.php">Sign Up</a></li>
                   <li class="dropdown">
                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sign in <b class="caret"></b></a>
@@ -264,13 +264,13 @@
 	    
 	  </div>
 	  <div class="center_home_2_inner_2_inner_1 clearfix">
-		   <ul class="nav nav-tabs">
+		   <ul class="nav hide-sm nav-tabs">
 			  <li class="active"><a data-toggle="tab" href="#home">New</a></li>
 			  <li class=""><a data-toggle="tab" href="#menu1">Trending</a></li>
 			  <li class=""><a data-toggle="tab" href="#menu2">Tags</a></li>
           </ul>
 
-			<div class="tab-content clearfix">
+			<div class="tab-content hide-sm clearfix">
 			  <div id="home" class="tab-pane fade clearfix active in">
 				 <div class="click clearfix">
 				   <div class="home_inner clearfix">
@@ -337,6 +337,7 @@
 		   </ul>
 	   </div>
 	   <hr/>
+	    <h3 class="heading_tag" style="margin-bottom: -10px;">SIGN IN</h3>
 	    <div class="center_home_2_inner_login clearfix">
 			  <div class="form-group">
 				<label for="inputEmail">Username <span class="icon_tag">*</span></label>
@@ -362,38 +363,16 @@
  </div>
 </section>
 
-<section id="footer">
- <div class="container">
-  <div class="row">
-   
-	<div class="col-sm-2 col-md-4">
-	 <div class="footer_1 clearfix">
-	  <h4>Help & Support</h4>
-	
-	 </div>
-	</div>
-	<div class="col-sm-2 col-md-4">
-	 <div class="footer_1 clearfix">
-	  <h4>Company</h4>
-	  
-	 </div>
-	</div>
-	<div class="col-sm-2 col-md-4">
-	 <div class="footer_1 clearfix">
-	  <h4>About Our Portal</h4>
-	 
-	 </div>
-	</div>
-  </div>
- </div> 
-</section>
 
 <section id="footer_bottom">
  <div class="container">
   <div class="row">
    <div class="col-sm-12">
-    <div class="footer_bottom_1 text-center clearfix">
-	  <p>© 2020 Your Website Name. All Rights Reserved | Design by <a href="">CubeTech</a></p>
+    <div class="footer_bottom_1 clearfix">
+	  <p> ©Department of Agricultural Economics & Extension,
+   Faculty of Agriculture, Obio Akpa Campus,
+   Akwa Ibom State University, Nigeria </p>
+   <p class="text-center">&copy; 2020 | <a href="">Cube Technologies&trade;</a></p>
 	</div>
    </div>
   </div>
